tenzir/tests/exec/operators/fluent-bit/invalid_plugin.txt
error: failed to setup Fluent Bit `does-not-exist` input plugin 
 --> exec/operators/fluent-bit/invalid_plugin.tql:3:17
  |
3 | from_fluent_bit "does-not-exist"
  |                 ^^^^^^^^^^^^^^^^ 
  |
  = note: error code `-1`
